--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
   <div id="slideshowbg" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; ">
     <div class="card mb-4 mx-auto rounded-3 shadow-sm" style="min-width: 30%; background-image: url('loginbackground.jpeg') ;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;">
       <div class="card-header py-3">
-        <h4 class="my-0 fw-normal">Please Login</h4>
+        <h4 class="my-0 fw-normal">Please Login for Electricity Billing</h4>
       </div>
       <div class="card-body">
         <main class="form-signin">
