--- a/login.html
+++ b/login.html
@@ -36,27 +36,27 @@
       </div>
       <div class="card-body">
         <main class="form-signin">
-          <form method="POST" action = "index.php">
+          <form method="POST" action = "login_backend.php">
             <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
 
             <div class="form-floating my-2" style="border-radius: 5px;">
               <!-- <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"> -->
               <!-- <label for="floatingInput">Email address</label> -->
-              <select class="form-control" id="floatingInput" required style="border-radius: 5px;">
+              <select class="form-control" id="field" name="field" required style="border-radius: 5px;">
                 <option>Select Field...</option>
                 <option> Admin </option>
                 <option> Customer </option>
               </select>
             </div>
             <div class="form-floating my-2" style="border-radius: 5px;">
-              <input type="username" class="form-control" id="floatingInput" placeholder="username"
+              <input type="number" class="form-control" required id="numberPhone" name="numberPhone" placeholder="Phone Number"
                 style="border-radius: 5px;">
-              <label for="floatingInput">Username</label>
+              <label for="numberPhone">Phone Number</label>
             </div>
             <div class="form-floating my-2">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+              <input type="password" class="form-control" required id="txtPassword" name="txtPassword" placeholder="Password"
                 style="border-radius: 5px;">
-              <label for="floatingPassword">Password</label>
+              <label for="txtPassword">Password</label>
             </div>
 
             <!-- <div class="checkbox mb-3">
@@ -64,7 +64,7 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div> -->
-            <button type="button" class="w-100 btn btn-lg btn-primary" type="submit">Log In</button>
+            <input  class="w-100 btn btn-lg btn-primary" type="submit" value="Log In">
           </form>
         </main>
       </div>
