--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,24 @@
     <title>Signup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="signup.css" rel="stylesheet">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $("#termsService").click(function(){
+          if ($(this).is(":checked")) {
+            $("#registerBtn").removeAttr("disabled");
+            $("#registerBtn").focus();
+          } else {
+            $("#registerBtn").attr("disabled", "disabled");
+          }
+        })
+        $("#registerBtn").click(function(){
+          if($('#txtPassword').val() != $('#txtConfirmPassword').val()) {
+              alert("Confirm password doesn't match with your Password");
+          }
+        })
+      })
+    </script>
 </head>
 <body>
     <section>
@@ -19,48 +36,48 @@
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form>
+              <form method="post" action="signup_backend.php">
 
-                <div class="form-outline mb-6">
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
+                <div class="form-outline mb-6 mt-5">
+                  <input type="text" id="txtName" name="txtName" required class="form-control form-control-lg" placeholder="Full Name" />
+<!--                  <label class="form-label" for="form3Example1cg">Your Name</label>-->
                 </div>
 
-                <div class="form-outline mb-6">
-                  <input type="number" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Phone Number</label>
+                <div class="form-outline mb-6 mt-3">
+                  <input type="number" id="numberMobile" name="numberMobile" class="form-control form-control-lg" required  placeholder="Mobile Number" />
+<!--                  <label class="form-label" for="form3Example3cg">Phone Number</label>-->
                 </div>
 
-                <div class="form-outline mb-6">
-                    <input type="text" id="form3Example3cg" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example3cg">Meter Number</label>
+                <div class="form-outline mb-6 mt-3">
+                    <input type="text" id="txtMeter" name="txtMeter" class="form-control form-control-lg" required placeholder="Meter Number" />
+<!--                    <label class="form-label" for="form3Example3cg">Meter Number</label>-->
                 </div>
 
-                <div class="form-outline mb-6">
-                    <input type="text" id="form3Example3cg" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example3cg">Address</label>
+                <div class="form-outline mb-6 mt-3">
+                    <input type="text" id="txtAddress" name="txtAddress" class="form-control form-control-lg" required placeholder="Address" />
+<!--                    <label class="form-label" for="form3Example3cg">Address</label>-->
                 </div>
 
-                <div class="form-outline mb-6">
-                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">Password</label>
+                <div class="form-outline mb-6 mt-3">
+                  <input type="password" id="txtPassword" name="txtPassword" class="form-control form-control-lg" required placeholder="Password"/>
+<!--                  <label class="form-label" for="form3Example4cg">Password</label>-->
                 </div>
 
-                <div class="form-outline mb-6">
-                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                <div class="form-outline mb-6 mt-3">
+                  <input type="password" id="txtConfirmPassword" name="txtConfirmPassword" class="form-control form-control-lg" required placeholder="Confirm Password"/>
+<!--                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>-->
                 </div>
 
                 <div class="form-check d-flex justify-content-center mb-5">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-                  <label class="form-check-label" for="form2Example3g">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="termsService" />
+                  <label class="form-check-label" for="termsService">
                     I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
                   </label>
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button type="button"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                  <input type="submit" value="Register" disabled id="registerBtn"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="login.html"
