--- a/generateBill_frontend.html
+++ b/generateBill_frontend.html
@@ -9,8 +9,63 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="signup.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 <body>
+<nav class="navbar bg-dark">
+    <div class="container-fluid ">
+        <span class="navbar-brand mb-0 h1 text-white">Electro-Bill</span>
+        <a href="#">  <button class="btn btn-outline-success" onClick="">Dasboard</button></a>
+    </div>
+
+</nav>
+<section>
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">Generate Bill for Customer</h2>
+
+                            <form method="post" action="generateBill_backend.php">
+
+                                <div class="form-outline mb-6 mt-5">
+                                    <input type="text" id="txtName" name="txtName" required class="form-control form-control-lg" placeholder="Full Name" />
+                                </div>
+
+                                <div class="form-outline mb-6 mt-3">
+                                    <input type="number" id="numberMobile" name="numberMobile" class="form-control form-control-lg" required  placeholder="Mobile Number" />
+                                </div>
+
+                                <div class="form-outline mb-6 mt-3">
+                                    <input type="number" id="numberUnits" name="numberUnits" class="form-control form-control-lg" required placeholder="Units Consumed" />
+                                </div>
+
+                                <div class="form-outline mb-6 mt-3">
+                                    <input type="number" id="numberAmount" name="numberAmount" class="form-control form-control-lg" required placeholder="Amount" />
+                                </div>
+
+                                <div class="form-outline mb-6 mt-3">
+                                    <label for="dateDue">Due Date</label>
+                                    <input type="date" id="dateDue" name="dateDue" class="form-control form-control-lg" required />
+                                </div>
+
+                                <div class="d-flex justify-content-center mt-5">
+                                    <input type="submit" value="Generate Bill" id="generateBill"
+                                           class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
+                                </div>
+
+
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
