--- a/customer.html
+++ b/customer.html
@@ -9,35 +9,31 @@
     <!-- <link href="login.css" rel="stylesheet"> -->
 </head>
 <body>
-    <header class="p-4 mb-3 border-bottom">
+    <header class="p-4 mb-3 border-bottom bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <a href="#" class="nav-link px-2 link-dark">About</a>
-          <a href="#" class="nav-link px-2 link-dark">View Charges</a>
-          <a href="#" class="nav-link px-2 link-dark">Help Center</a>
+          <a href="#" class="nav-link px-2 link-dark text-white">About</a>
+          <a href="#" class="nav-link px-2 link-dark text-white">View Charges</a>
+          <a href="#" class="nav-link px-2 link-dark text-white">Help Center</a>
         </div>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-        </form>
+<!--        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">-->
+<!--          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">-->
+<!--        </form>-->
 
         <div class="dropdown text-end">
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+            <img src="./profilepic.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
           </a>
-          <ul class="dropdown-menu text-small">
-            <a class="dropdown-item" href="#">New project...</a>
-            <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="#">Profile</a>
-            <hr class="dropdown-divider">
-            <a class="dropdown-item" href="#">Sign out</a>
-          </ul>
+
           
         </div>
         <div class="mr-1">
-          <a href="#" class="nav-link px-2 link-dark">Customer</a>
+          <a href="#" class="nav-link px-2 link-dark text-white">Customer</a>
+
         </div>
+        <a href="./login.html"><button class="btn btn-outline-primary">logout</button></a>
       </div>
     </div>
     <div>
@@ -48,55 +44,32 @@
   <div class="row row-cols-1 row-cols-md-3 mt-5 mb-3 p-5 text-center">
     <div class="col">
       <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">Pending Bills</h4>
+        <div class="card-header py-3" style="background-color:#09203f; color:white;">
+          <h4 class="my-0 fw-normal">Previous Bills</h4>
         </div>
         <div class="card-body">
-          <!-- <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1> -->
-          <ul class="list-unstyled mt-3 mb-6">
-            <li>To see all the pending bills on monthly basis</li>
-            <!-- <li>2 GB of storage</li>
-            <li>Email support</li>
-            <li>Help center access</li> -->
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>To see all the previous paid bills on monthly basis</li>
           </ul>
-          <button type="button" class="w-50 btn btn-lg btn-primary">Click Here</button>
+          <a href="./view-previous-customer-bills.html"><button type="button" class="w-50 btn btn-lg btn-primary">Click Here</button></a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
+        <div class="card-header py-3" style="background-color:#09203f; color:white;">
           <h4 class="my-0 fw-normal">Pay Bills</h4>
         </div>
         <div class="card-body">
-          <!-- <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1> -->
           <ul class="list-unstyled mt-3 mb-4">
             <li>To pay all the pending bills</li>
-            <!-- <li>10 GB of storage</li>
-            <li>Priority email support</li>
-            <li>Help center access</li> -->
+
           </ul>
-          <button type="button" class="w-50 btn btn-lg btn-primary">Click Here</button>
+          <a href="./view-customer-unpaid-bill.html"><button type="button" class="w-50 btn btn-lg btn-primary">Click Here</button></a>
         </div>
       </div>
     </div>
-    <!-- <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary">
-        <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">Generate Bills</h4>
-        </div>
-        <div class="card-body">
-         <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1> -->
-          <!-- <ul class="list-unstyled mt-3 mb-4"> -->
-            <!-- <li>To generate bills for a customers according to their usage</li> -->
-            <!-- <li>15 GB of storage</li>
-            <li>Phone and email support</li>
-            <li>Help center access</li> -->
-          <!-- </ul>
-          <button type="button" class="w-100 btn btn-lg btn-primary">Click Here</button>
-        </div>
-      </div>
-    </div> -->
+
   </div>
 </body>
 </html>
