--- a/generateBill_frontend.html
+++ b/generateBill_frontend.html
@@ -15,7 +15,7 @@
 <nav class="navbar bg-dark">
     <div class="container-fluid ">
         <span class="navbar-brand mb-0 h1 text-white">Electro-Bill</span>
-        <a href="#">  <button class="btn btn-outline-success" onClick="">Dasboard</button></a>
+        <a href="./index.html">  <button class="btn btn-outline-success" onClick="">Dashboard</button></a>
     </div>
 
 </nav>
