--- a/login.html
+++ b/login.html
@@ -37,11 +37,8 @@
       <div class="card-body">
         <main class="form-signin">
           <form method="POST" action = "login_backend.php">
-            <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
 
             <div class="form-floating my-2" style="border-radius: 5px;">
-              <!-- <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"> -->
-              <!-- <label for="floatingInput">Email address</label> -->
               <select class="form-control" id="field" name="field" required style="border-radius: 5px;">
                 <option>Select Field...</option>
                 <option> Admin </option>
@@ -59,13 +56,10 @@
               <label for="txtPassword">Password</label>
             </div>
 
-            <!-- <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div> -->
             <input  class="w-100 btn btn-lg btn-primary" type="submit" value="Log In">
           </form>
+          <p class="text-center mt-5 mb-0" style="background-color:black;color:white;">Do not have an account?<a
+                  href="signup.html" class="fw-bold text-body text-white"><u class="text-white"> Signup here</u></a></p>
         </main>
       </div>
     </div>
