--- a/view-customer-unpaid-bill.html
+++ b/view-customer-unpaid-bill.html
@@ -58,7 +58,7 @@
 <nav class="navbar bg-dark">
     <div class="container-fluid ">
         <span class="navbar-brand mb-0 h1 text-white">Electro-Bill</span>
-        <a href="#">  <button class="btn btn-outline-success" onClick="">Dasboard</button></a>
+        <a href="./customer.html">  <button class="btn btn-outline-success" onClick="">Dashboard</button></a>
     </div>
 </nav>
 <div class="container-md" style=" background-color:lightgrey">
