--- a/view-previous-customer-bills.html
+++ b/view-previous-customer-bills.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Customers List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -16,15 +17,24 @@
         varModule.controller("myController", function($scope, $http) {
             $scope.fetchedAllBills;
             $scope.fetchreq=function() {
-                $http.get("fetch-all-bills.php").then(ok,notok);
+                // alert(document.getElementById("numberMobile").value);
+                $scope.mobile=document.getElementById("numberMobile").value;
+                $http.get("fetch-paid-bills-customer.php?mobile="+$scope.mobile).then(ok,notok);
                 function ok(response) {
                     // alert(JSON.stringify(response.data));
+                    if(response.data.length===0){
+                        document.getElementById("errMobile").innerHTML="Invalid Mobile Number or No Previous Bills found";
+                    }
+                    else{
+                        document.getElementById("errMobile").innerHTML="";
+                    }
                     $scope.fetchedAllBills = response.data;
                 }
                 function notok() {
                     alert("something went wrong");
                 }
             }
+
         });
 
     </script>
@@ -33,20 +43,21 @@
 <nav class="navbar bg-dark">
     <div class="container-fluid ">
         <span class="navbar-brand mb-0 h1 text-white">Electro-Bill</span>
-        <a href="./index.html">  <button class="btn btn-outline-success" onClick="">Dashboard</button></a>
+        <a href="./customer.html">  <button class="btn btn-outline-success" onClick="">Dashboard</button></a>
     </div>
 </nav>
 <div class="container-md" style=" background-color:lightgrey">
     <div class="h2 border" style="background-color:#09203f; color:white;">
-        <center>List of All the Bills Generated</center>
+        <center>List of paid Bills</center>
     </div>
-    <div class="form-row">
-        <!--        <div class="col-md-4 form-group">-->
-        <!--            <label for="numberMobile">Registered Mobile Number</label><br>-->
-        <!--            <input type="text" ng-model="numberMobile" class="form-control" ng-init="txtUid='">-->
-        <!--        </div>-->
+    <div class="d-flex justify-content-evenly mt-3 mb-4">
+        <div class="col-md-4 ">
+            <!--                    <label for="numberMobile">Registered Mobile Number</label><br>-->
+            <input type="text" placeholder="Registered Mobile Number" ng-model="numberMobile" id="numberMobile" autofocus class="form-control" ng-init="txtUid='">
+        </div>
         <div class="col-md-4 ">
             <input type="button" class="form-control btn btn-info" value="Fetch all Bills Generated" ng-click="fetchreq();">
+            <span id="errMobile" style="color: red"></span>
         </div>
     </div>
     <div style="background-color:white">
@@ -55,7 +66,6 @@
             <tr>
                 <th scope="col">Bill No.</th>
                 <th scope="col">Full Name</th>
-                <th scope="col">Mobile Number</th>
                 <th scope="col">Bill generated Date</th>
                 <th scope="col">Units Consumed</th>
                 <th scope="col">Amount</th>
@@ -67,7 +77,6 @@
             <tr ng-repeat="obj in fetchedAllBills">
                 <td scope="row">{{obj.billNo}}</td>
                 <td >{{obj.name}}</td>
-                <td>{{obj.mobile}}</td>
                 <td>{{obj.dateOfBillGenerate}}</td>
                 <td>{{obj.units}} Watt</td>
                 <td> Rs. {{obj.amount}}</td>
